Bug #24655 parallell mysqld/ndbd shutdown cause unnecessary locked dict
Submitted: 28 Nov 2006 14:33 Modified: 6 Dec 2006 12:25
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:
Assigned to: Jonas Oreland Target Version:

[28 Nov 2006 14:33] Jonas Oreland
Description:
 

How to repeat:
 

Suggested fix:
[28 Nov 2006 14:34] Jonas Oreland
Fix

Attachment: diff.txt (text/plain), 5.67 KiB.

[1 Dec 2006 14:04] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16304

ChangeSet@1.2341, 2006-12-01 14:04:06+01:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#24655
    Handle events "differently" so that dict doesnt get lock too often
[6 Dec 2006 12:25] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.14 changelog.